# PolyJuice-Fuzzer

./: .gitignore  env.sh  readme.md
equality_saturation_helper/: bug_code_generation.py  data_format.py  fuzz_loop.py  helper.py  minimizer.py
equality_saturation_helper/rust_helper/: Cargo.toml
equality_saturation_helper/rust_helper/src/: config.rs  graph.rs  lib.rs  model.rs  rules.rs
exp_helper/: 0_download_raw_data.sh  1_sumarize_buglist_raw.py  2_run_cmp_exp.py  2_sumarize_cmp_exp_raw.py  3_eq_effectiveness_raw.py  3_run_eq_effectiveness.py  4_run_throughput.py  4_throughput_raw.py  bug_analysis.py  evaluate_tvm_log.py  process_diff_effect.py  test_env.py  tvm_log_process.py
experiments/legacy/: graphfuzz.py
nnsmith/: gir.py  graph_gen.py  logging.py  narrow_spec.py
nnsmith/abstract/: op.py
nnsmith/backends/: factory.py  hidet.py  infinitensor.py  pt2.py  tensorrt.py  tvm.py  xla.py
nnsmith/cli/: ablation_exp_run.py  equivalent_fuzz.py  model_exec.py  model_gen.py  run_a_testcase.py  test_eq_helper.py
nnsmith/config/: main.yaml
nnsmith/materialize/: __init__.py
nnsmith/materialize/onnx/: __init__.py
nnsmith/materialize/tensorflow/: __init__.py  forward.py  tfnet.py
nnsmith/materialize/torch/: __init__.py  forward.py  input_gen.py  symbolnet.py
tests/torch/: test_render.py
