[package]
name = "dl-compiler-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dl_compiler_fuzzer_helper"
#crate_type = ["staticlib", "rlib", "cdylib"]
crate_type = ["cdylib"]
path = "src/lib.rs"

#[[bin]]
#name = "dl_compiler_fuzzer"
#path = "src/_main"

[dependencies]
egg = "0.9.4"
itertools = "0.10.5"
env_logger = "0.9"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
serde_json = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
rand = "0.8"
indexmap = "2.2.6"
fxhash = "0.2.1"

[profile.release]
debug = true